Corrected lightbox enquiry form size on mobile devices

--- a/assets/sass/propertyhive/propertyhive.scss
+++ b/assets/sass/propertyhive/propertyhive.scss
@@ -317,6 +317,10 @@ ul.properties {
 			}
 		}
 
+		form {
+			margin: 0;
+		}
+
 		label {
 			@include span(4 of 12);
 			padding-top: ms(0);
@@ -778,6 +782,65 @@ p.no-comments {
 	}
 }
 
-@media (min-width: $handheld) and (max-width: $container-width) {
+@media (max-width: $handheld) {
 	
+	.single-property {
+		.pp_inline { padding:10px; }
+		
+	    .pp_pic_holder.pp_default
+	    {
+	        width: 90%!important;
+	        margin-top:-100px !important;
+	        left: 5%!important;
+	    }
+	    div.pp_default .pp_content_container .pp_left
+	    {
+	        padding-left: 0!important;
+	    }
+	    div.pp_default .pp_content_container .pp_right
+	    {
+	        padding-right: 0!important;
+	    }
+	    .pp_content
+	    {
+	        width: 100%!important;
+	        height: auto!important;
+	    }
+	    .pp_fade
+	    {
+	        width: 100%!important;
+	        height: 100%!important;
+	    }
+	    a.pp_expand,
+	    a.pp_contract,
+	    .pp_hoverContainer,
+	    .pp_gallery,
+	    .pp_top,
+	    .pp_bottom
+	    {
+	        display: none!important;
+	    }
+	    #pp_full_res img
+	    {
+	        width: 100%!important;
+	        height: auto!important;
+	    }
+	    .pp_details
+	    {
+	        box-sizing: border-box;
+	        width: 100%!important;
+	        padding-left: 3%;
+	        padding-right: 4%;
+	        padding-top: 10px;
+	        padding-bottom: 10px;
+	        height: 53px;
+	        background-color: #fff;
+	        margin-top: -2px!important;
+	    }
+	    a.pp_close
+	    {
+	        right: 10px!important;
+	        top: 12px!important;
+	    }
+	}
 }
